2007-11-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	Set default dir to NULL for gnome_cmd_file_selector_set_connection ()

2007-11-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-options-dialog.cc:
	Use stock buttons in dialogs

2007-11-05  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-selector.cc:
	Proper handling of 'cd ~/mydir'

2007-11-04  Matthias <neolitho@wh12.tu-dresden.de>

	* data/gnome-commander.ebuild:
	Typo fix

2007-11-03  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	Deep surgery of the FTP dialog

2007-11-01  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-cmdline.cc:
	'cd -': go to dir '-' if present

2007-10-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	Added gnome_cmd_con_get_icon_name ()

2007-10-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/image-render.cc:
	* src/libgviewer/image-render.h:
	* src/libgviewer/text-render.cc:
	* src/libgviewer/text-render.h:
	* src/libgviewer/viewer-widget.cc:
	Fixed problem with updating of internal viewer status bar

2007-10-29  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/utils.cc:
	* src/utils.h:
	* src/libgviewer/viewer-window.cc:
	Dropped duplicate code for help menus

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-user-actions.cc:
	Fixed bug in detecting key modifiers (wrong handling of key bindings)

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-options-dialog.h:
	* src/main.cc:
	Allow disabling use of gnome-auth-manager

2007-10-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.cc: